--- a/day-1/style.css
+++ b/day-1/style.css
@@ -11,10 +11,21 @@ body {
 }
 
 .container {
-    width: 100%;
-    height: 100vh;
+    width: 20rem;
+    /* height: 50vh; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: hsl(0, 0%, 100%);
+    border-radius: 1rem;
+    margin: 0 auto;
+    margin-top: 2rem;
+    padding: 1rem;
+}
+
+.box5 img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
 }
