--- a/day-1/style.css
+++ b/day-1/style.css
@@ -1,18 +1,18 @@
 *{
     margin: 0;
     padding: 0;
-    background-origin: border-box;
+    box-sizing: border-box;
 }
 
 body {
     font-size: 15px;
     font-weight: 700;
-    background-color: hsl(212, 45%, 89%)
+    background-color: hsl(212, 45%, 89%);
+    font-family: 'Outfit', sans-serif;
 }
 
 .container {
     width: 20rem;
-    /* height: 50vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,12 +20,56 @@ body {
     background-color: hsl(0, 0%, 100%);
     border-radius: 1rem;
     margin: 0 auto;
-    margin-top: 2rem;
+    margin-top: 3rem;
     padding: 1rem;
 }
 
+.sub-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+}
 .box5 img {
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
+}
+.box4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0.5rem;
+}
+.box4 h1 {
+    font-size: 24px;
+    color: hsl(218, 44%, 22%);
+    margin-bottom: 0.75rem;
+}
+.box4 p {
+    font-weight: 400;
+    color: hsl(216, 15%, 48%);
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        /* margin: 2rem 0; */
+    }
+    .box4 h1 {
+        font-size: 20px;
+    }
+    .box4 p {
+        font-size: 14px;
+    }
+    
 }
