--- a/day-1/style.css
+++ b/day-1/style.css
@@ -56,14 +56,14 @@ body {
     margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 375px) {
     .container {
         width: 80%;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        /* margin: 2rem 0; */
+        margin-top: 8rem;
     }
     .box4 h1 {
         font-size: 20px;
