--- a/day-1/style.css
+++ b/day-1/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 700;
     background-color: hsl(212, 45%, 89%);
     font-family: 'Outfit', sans-serif;
@@ -20,6 +20,7 @@ body {
     background-color: hsl(0, 0%, 100%);
     border-radius: 1rem;
     margin: 0 auto;
+    left: 0;
     margin-top: 3rem;
     padding: 1rem;
 }
@@ -56,7 +57,7 @@ body {
     margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 1440px) {
     .container {
         width: 80%;
         display: flex;
