--- a/day-1/style.css
+++ b/day-1/style.css
@@ -4,10 +4,17 @@
     box-sizing: border-box;
 }
 
+:root {
+    --body-color: hsl(212, 45%, 89%);
+    --container-color: hsl(0, 0%, 100%);
+    --header-color: hsl(218, 44%, 22%);
+    --text-color: hsl(216, 15%, 48%);
+}
+
 body {
-    font-size: 1rem;
+    font-size: calc(15 * 1rem / 16);
     font-weight: 700;
-    background-color: hsl(212, 45%, 89%);
+    background-color: var(--body-color);
     font-family: 'Outfit', sans-serif;
 }
 
@@ -17,11 +24,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: hsl(0, 0%, 100%);
+    background-color: var(--container-color);
     border-radius: 1rem;
     margin: 0 auto;
-    left: 0;
-    margin-top: 3rem;
+    margin-inline-start: 3rem ;
     padding: 1rem;
 }
 
@@ -46,13 +52,13 @@ body {
     padding: 0 0.5rem;
 }
 .box4 h1 {
-    font-size: 24px;
-    color: hsl(218, 44%, 22%);
+    font-size: calc(24 * 1rem / 16);
+    color: var(--header-color);
     margin-bottom: 0.75rem;
 }
 .box4 p {
     font-weight: 400;
-    color: hsl(216, 15%, 48%);
+    color: var(--text-color);
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -67,7 +73,7 @@ body {
         margin-top: 8rem;
     }
     .box4 h1 {
-        font-size: 20px;
+        font-size: calc(20 * 1rem / 16);
     }
     .box4 p {
         font-size: 14px;
