--- a/day-1/style.css
+++ b/day-1/style.css
@@ -27,7 +27,7 @@ body {
     background-color: var(--container-color);
     border-radius: 1rem;
     margin: 0 auto;
-    margin-inline-start: 3rem ;
+    margin-top: 3rem ;
     padding: 1rem;
 }
 
@@ -76,7 +76,7 @@ body {
         font-size: calc(20 * 1rem / 16);
     }
     .box4 p {
-        font-size: 14px;
+        font-size: calc(14 * 1rem / 16);
     }
     
 }
