--- a/day-1/style.css
+++ b/day-1/style.css
@@ -16,6 +16,8 @@ body {
     font-weight: 700;
     background-color: var(--body-color);
     font-family: 'Outfit', sans-serif;
+    /* width: 100%;
+    height: 100vh; */
 }
 
 .container {
