--- a/day-2/style.css
+++ b/day-2/style.css
@@ -20,6 +20,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 
 .card {
@@ -29,6 +30,7 @@ body {
     border: 1px solid var(--border-color);
     box-shadow: 8px 8px 1px rgba(0, 0, 0, 1);
     border-radius: 1rem;
+    margin: 0 1rem;
 }
 
 .image-holder {
