--- a/day-3/style.css
+++ b/day-3/style.css
@@ -88,4 +88,14 @@ main {
     border-radius: 0.5rem;
     color: var(--text-color);
     font-weight: 600;
+    cursor: pointer;
+}
+
+.social-links button:hover {
+    background: var(--primary-bg);
+}
+
+.social-links button.active {
+    background: var(--gren-text);
+
 }
