--- a/day-4/style.css
+++ b/day-4/style.css
@@ -5,5 +5,39 @@
 }
 
 :root {
-    --bg-color: 
+    --bg-color: hsl(330, 100%, 98%);
+    --white: hsl(0, 0%, 100%);
+}
+
+body {
+    background-color: hsl(330, 100%, 98%);
+    font-family: 'Young Serif', serif;
+    color: hsl(330, 100%, 20%);
+    font-size: 1rem;
+}
+
+main {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 3rem;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    background-color: var(--white);
+}
+img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
 }
