--- a/day-4/style.css
+++ b/day-4/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 main {
-    width: 50%;
+    width: 40rem;
     display: flex;
     justify-content: center;
     align-items: center;
