--- a/day-4/style.css
+++ b/day-4/style.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: hsl(330, 100%, 98%);
+    background-color: var(--bg-color);
     font-family: 'Outfit', sans-serif;
     font-size: 1rem;
 }
