--- a/day-5/style.css
+++ b/day-5/style.css
@@ -15,5 +15,69 @@
 
 body{
     font-family: "Montserrat", sans-serif;
+    background-color: var(--bg-cream);
+}
 
+main{
+    width: 50%;
+    margin: 0 auto;
+}
+
+.container{
+    background-color: var(--bg-white);
+    border-radius: 1rem;
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: ; */
+    /* gap: 2rem; */
+    margin-top: 4rem;
+    height: 100%;
+}
+
+.picture{
+    width: 50%;
+    height: auto;
+}
+
+.picture img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+.description{
+    padding: 2rem 2rem;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.text p{
+    color: var(--text-grey);
+    /* font-weight: 700; */
+    /* font-size: 0.875rem; */
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    margin-bottom: 0.5rem;
+}
+.text h1{
+    font-family: 'Fraunces', serif;
+    color: var(--text-black);
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 1;
+    margin-bottom: 1rem;
+}
+
+.text span{
+    color: var(--text-grey);
+    /* font-size: 0.875rem; */
+    line-height: 1.5;
 }
