--- a/day-5/style.css
+++ b/day-5/style.css
@@ -51,13 +51,14 @@ main{
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-;
+    justify-content: space-between;
 }
 
 .text{
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    /* width: 100%; */
 }
 .text p{
     color: var(--text-grey);
@@ -80,4 +81,10 @@ main{
     color: var(--text-grey);
     /* font-size: 0.875rem; */
     line-height: 1.5;
+}
+
+.price {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
