--- a/day-6/style.css
+++ b/day-6/style.css
@@ -28,7 +28,7 @@ body {
 
 .text-content {
     text-align: center;
-    /* margin-bottom: 2rem; */
+    margin-bottom: 2rem;
 }
 .text-content h2 {
     font-size: 2rem;
@@ -45,5 +45,43 @@ body {
 .text-content span {
     line-height: 1.6;
     color: var(--text-color);
-    /* margin: 0 auto; */
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: 200px 200px 200px ;
+    grid-template-rows: 200px 200px 200px 200px;
+    gap: 1rem;
+    background: pink;
+}
+
+.card-container .card {
+    padding: 1rem;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    border-top: 5px solid var(--secondary-color);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* width: 300px; */
+    /* overflow: hidden; */
+}
+
+.box {
+    grid-column:  1 /2;
+    grid-row: 2 /3;
+}
+.box1 {
+    grid-column: 2 /3;
+    grid-row: 1 /2;
+}
+.box2 {
+    grid-column: 2 /3;
+    grid-row: 2 /3;
+}
+.box3 {
+    grid-column: 3 /4;
+    grid-row: 2 /3;
+}
+
+.card h3 {
+    color: var(--text-color1);
 }
