--- a/day-6/style.css
+++ b/day-6/style.css
@@ -49,16 +49,18 @@ body {
 
 .card-container {
     display: grid;
-    grid-template-columns: 200px 200px 200px ;
-    grid-template-rows: 200px 200px 200px 200px;
-    gap: 1rem;
-    background: pink;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  gap: 30px;
+  /* max-width: 1000px; */
+  /* margin: 0 auto; */
+  /* padding: 60px 20px; */
 }
 
 .card-container .card {
     padding: 1rem;
     background-color: var(--background-color);
-    border-radius: 10px;
+    border-radius: 5px;
     border-top: 5px solid var(--secondary-color);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     /* width: 300px; */
@@ -66,20 +68,28 @@ body {
 }
 
 .box {
-    grid-column:  1 /2;
-    grid-row: 2 /3;
+    /* grid-column:  1 /2;
+    grid-row: 2 /3; */
+    grid-column: 1 ;
+    grid-row: 2 / span 6;
 }
 .box1 {
-    grid-column: 2 /3;
-    grid-row: 1 /2;
+    /* grid-column: 2 /3;
+    grid-row: 1 /2; */
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 3;
 }
 .box2 {
-    grid-column: 2 /3;
-    grid-row: 2 /3;
+    /* grid-column: 2 /3;
+    grid-row: 2 /3; */
+    grid-column: 2 / span 2;
+    grid-row: 4 / span 6;
 }
 .box3 {
-    grid-column: 3 /4;
-    grid-row: 2 /3;
+    /* grid-column: 3 /4;
+    grid-row: 2 /3; */
+    grid-column: 4 / span 4;
+    grid-row: 2 / span 4;
 }
 
 .card h3 {
